<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_r_wave"
    tools:context=".ui.fragment.auth.RegisterFragment">

    <TextView
        style="@style/LifeTrack"
        android:layout_marginTop="50dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/number"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/et_number"
        app:layout_constraintLeft_toLeftOf="@id/et_number" />

    <EditText
        android:id="@+id/et_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="165dp"
        android:inputType="phone"
        android:background="@drawable/solid"
        android:hint="@string/your_number"
        android:padding="@dimen/normal_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/code"
        android:textColor="@color/grey"
        app:layout_constraintLeft_toLeftOf="@id/et_code"
        app:layout_constraintTop_toBottomOf="@id/et_number" />

    <EditText
        android:id="@+id/et_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="165dp"
        android:background="@drawable/solid"
        android:hint="@string/your_code"
        android:padding="@dimen/normal_padding"
        app:layout_constraintTop_toBottomOf="@id/tv_code" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_number"
        style="@style/button_standart"
        android:text="Number"
        app:layout_constraintBottom_toTopOf="@id/btn_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_code"
        style="@style/button_standart"
        android:layout_marginBottom="42dp"
        android:text="Code"
        app:layout_constraintBottom_toTopOf="@id/tv_text_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_text_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="74dp"
        android:text="Already using Lifetrack?"
        android:textColor="@color/grey"
        android:textSize="@dimen/normal"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="74dp"
        android:clickable="true"
        android:text="Log in"
        android:textColor="@color/white_red"
        android:textSize="@dimen/normal"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_text_bottom" />


</androidx.constraintlayout.widget.ConstraintLayout>